# ostep-projects

./: CMakeLists.txt
initial-kv/: kv.c
initial-reverse/: initial-reverse.c
initial-utilities/wcat/: wcat.c
initial-utilities/wgrep/: wgrep.c
initial-utilities/wunzip/: wunzip.c
initial-utilities/wzip/: wzip.c
processes-shell/: shell.c
