cmake_minimum_required(VERSION 3.18)
project(ostep_projects)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(concurrency-mapreduce)
include_directories(concurrency-pzip)
include_directories(concurrency-webserver)
include_directories(concurrency-webserver/src)
include_directories(concurrency-xv6-threads)
include_directories(filesystems-checker)
include_directories(filesystems-distributed)
include_directories(initial-kv)
include_directories(initial-reverse)
include_directories(initial-utilities)
include_directories(initial-xv6)
include_directories(processes-shell)
include_directories(scheduling-xv6-lottery)
include_directories(tester)
include_directories(vm-xv6-intro)

add_executable(ostep_projects
        .idea/codeStyles/codeStyleConfig.xml
        .idea/sonarlint/issuestore/index.pb
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/ostep-projects.iml
        .idea/vcs.xml
        .idea/workspace.xml
        concurrency-mapreduce/mapreduce.h
        concurrency-mapreduce/README.md
        concurrency-pzip/README.md
        concurrency-webserver/src/io_helper.c
        concurrency-webserver/src/io_helper.h
        concurrency-webserver/src/Makefile
        concurrency-webserver/src/request.c
        concurrency-webserver/src/request.h
        concurrency-webserver/src/spin.c
        concurrency-webserver/src/wclient.c
        concurrency-webserver/src/wserver.c
        concurrency-webserver/README.md
        concurrency-xv6-threads/README.md
        filesystems-checker/CONTEST.md
        filesystems-checker/README.md
        filesystems-distributed/mfs.h
        filesystems-distributed/README.md
        initial-kv/tests/1.desc
        initial-kv/tests/1.err
        initial-kv/tests/1.out
        initial-kv/tests/1.rc
        initial-kv/tests/1.run
        initial-kv/tests/2.desc
        initial-kv/tests/2.err
        initial-kv/tests/2.out
        initial-kv/tests/2.rc
        initial-kv/tests/2.run
        initial-kv/tests/3.desc
        initial-kv/tests/3.err
        initial-kv/tests/3.out
        initial-kv/tests/3.rc
        initial-kv/tests/3.run
        initial-kv/README.md
        initial-kv/test-kv.sh
        initial-reverse/tests/1.desc
        initial-reverse/tests/1.err
        initial-reverse/tests/1.out
        initial-reverse/tests/1.rc
        initial-reverse/tests/1.run
        initial-reverse/tests/2.desc
        initial-reverse/tests/2.err
        initial-reverse/tests/2.out
        initial-reverse/tests/2.rc
        initial-reverse/tests/2.run
        initial-reverse/tests/3.desc
        initial-reverse/tests/3.err
        initial-reverse/tests/3.out
        initial-reverse/tests/3.rc
        initial-reverse/tests/3.run
        initial-reverse/tests/4.desc
        initial-reverse/tests/4.err
        initial-reverse/tests/4.out
        initial-reverse/tests/4.rc
        initial-reverse/tests/4.run
        initial-reverse/tests/5.desc
        initial-reverse/tests/5.err
        initial-reverse/tests/5.in
        initial-reverse/tests/5.out
        initial-reverse/tests/5.post
        initial-reverse/tests/5.pre
        initial-reverse/tests/5.rc
        initial-reverse/tests/5.run
        initial-reverse/tests/6.desc
        initial-reverse/tests/6.err
        initial-reverse/tests/6.in
        initial-reverse/tests/6.other
        initial-reverse/tests/6.out
        initial-reverse/tests/6.rc
        initial-reverse/tests/6.run
        initial-reverse/tests/7.desc
        initial-reverse/tests/7.err
        initial-reverse/tests/7.in
        initial-reverse/tests/7.out
        initial-reverse/tests/7.rc
        initial-reverse/tests/7.run
        initial-reverse/README.md
        initial-reverse/test-reverse.sh
        initial-utilities/wcat/tests/1.desc
        initial-utilities/wcat/tests/1.err
        initial-utilities/wcat/tests/1.in
        initial-utilities/wcat/tests/1.out
        initial-utilities/wcat/tests/1.rc
        initial-utilities/wcat/tests/1.run
        initial-utilities/wcat/tests/2.desc
        initial-utilities/wcat/tests/2.err
        initial-utilities/wcat/tests/2.in.a
        initial-utilities/wcat/tests/2.in.b
        initial-utilities/wcat/tests/2.out
        initial-utilities/wcat/tests/2.rc
        initial-utilities/wcat/tests/2.run
        initial-utilities/wcat/tests/3.desc
        initial-utilities/wcat/tests/3.err
        initial-utilities/wcat/tests/3.in
        initial-utilities/wcat/tests/3.out
        initial-utilities/wcat/tests/3.rc
        initial-utilities/wcat/tests/3.run
        initial-utilities/wcat/tests/4.desc
        initial-utilities/wcat/tests/4.err
        initial-utilities/wcat/tests/4.out
        initial-utilities/wcat/tests/4.rc
        initial-utilities/wcat/tests/4.run
        initial-utilities/wcat/tests/5.desc
        initial-utilities/wcat/tests/5.err
        initial-utilities/wcat/tests/5.in
        initial-utilities/wcat/tests/5.out
        initial-utilities/wcat/tests/5.rc
        initial-utilities/wcat/tests/5.run
        initial-utilities/wcat/tests/6.desc
        initial-utilities/wcat/tests/6.err
        initial-utilities/wcat/tests/6.out
        initial-utilities/wcat/tests/6.rc
        initial-utilities/wcat/tests/6.run
        initial-utilities/wcat/tests/7.desc
        initial-utilities/wcat/tests/7.err
        initial-utilities/wcat/tests/7.out
        initial-utilities/wcat/tests/7.rc
        initial-utilities/wcat/tests/7.run
        initial-utilities/wcat/tests/7a.in
        initial-utilities/wcat/tests/7b.in
        initial-utilities/wcat/tests/7d.in
        initial-utilities/wcat/tests/filegen.py
        initial-utilities/wcat/README.md
        initial-utilities/wcat/test-wcat.sh
        initial-utilities/wgrep/tests/1.desc
        initial-utilities/wgrep/tests/1.err
        initial-utilities/wgrep/tests/1.in
        initial-utilities/wgrep/tests/1.out
        initial-utilities/wgrep/tests/1.rc
        initial-utilities/wgrep/tests/1.run
        initial-utilities/wgrep/tests/2.desc
        initial-utilities/wgrep/tests/2.err
        initial-utilities/wgrep/tests/2.out
        initial-utilities/wgrep/tests/2.rc
        initial-utilities/wgrep/tests/2.run
        initial-utilities/wgrep/tests/3.desc
        initial-utilities/wgrep/tests/3.err
        initial-utilities/wgrep/tests/3.out
        initial-utilities/wgrep/tests/3.rc
        initial-utilities/wgrep/tests/3.run
        initial-utilities/wgrep/tests/4.desc
        initial-utilities/wgrep/tests/4.err
        initial-utilities/wgrep/tests/4.in
        initial-utilities/wgrep/tests/4.out
        initial-utilities/wgrep/tests/4.rc
        initial-utilities/wgrep/tests/4.run
        initial-utilities/wgrep/tests/4.stdin
        initial-utilities/wgrep/tests/5.desc
        initial-utilities/wgrep/tests/5.err
        initial-utilities/wgrep/tests/5.in
        initial-utilities/wgrep/tests/5.out
        initial-utilities/wgrep/tests/5.rc
        initial-utilities/wgrep/tests/5.run
        initial-utilities/wgrep/tests/6.desc
        initial-utilities/wgrep/tests/6.err
        initial-utilities/wgrep/tests/6.in
        initial-utilities/wgrep/tests/6.out
        initial-utilities/wgrep/tests/6.rc
        initial-utilities/wgrep/tests/6.run
        initial-utilities/wgrep/tests/7.desc
        initial-utilities/wgrep/tests/7.err
        initial-utilities/wgrep/tests/7.in
        initial-utilities/wgrep/tests/7.out
        initial-utilities/wgrep/tests/7.rc
        initial-utilities/wgrep/tests/7.run
        initial-utilities/wgrep/README.md
        initial-utilities/wgrep/test-wgrep.sh
        initial-utilities/wunzip/tests/1.desc
        initial-utilities/wunzip/tests/1.err
        initial-utilities/wunzip/tests/1.in
        initial-utilities/wunzip/tests/1.out
        initial-utilities/wunzip/tests/1.rc
        initial-utilities/wunzip/tests/1.run
        initial-utilities/wunzip/tests/2.desc
        initial-utilities/wunzip/tests/2.err
        initial-utilities/wunzip/tests/2.in
        initial-utilities/wunzip/tests/2.out
        initial-utilities/wunzip/tests/2.rc
        initial-utilities/wunzip/tests/2.run
        initial-utilities/wunzip/tests/2a.in
        initial-utilities/wunzip/tests/2b.in
        initial-utilities/wunzip/tests/2c.in
        initial-utilities/wunzip/tests/3.desc
        initial-utilities/wunzip/tests/3.err
        initial-utilities/wunzip/tests/3.out
        initial-utilities/wunzip/tests/3.rc
        initial-utilities/wunzip/tests/3.run
        initial-utilities/wunzip/tests/4.desc
        initial-utilities/wunzip/tests/4.err
        initial-utilities/wunzip/tests/4.in
        initial-utilities/wunzip/tests/4.out
        initial-utilities/wunzip/tests/4.rc
        initial-utilities/wunzip/tests/4.run
        initial-utilities/wunzip/tests/5.desc
        initial-utilities/wunzip/tests/5.err
        initial-utilities/wunzip/tests/5.in
        initial-utilities/wunzip/tests/5.out
        initial-utilities/wunzip/tests/5.rc
        initial-utilities/wunzip/tests/5.run
        initial-utilities/wunzip/tests/6.desc
        initial-utilities/wunzip/tests/6.err
        initial-utilities/wunzip/tests/6.in
        initial-utilities/wunzip/tests/6.out
        initial-utilities/wunzip/tests/6.rc
        initial-utilities/wunzip/tests/6.run
        initial-utilities/wunzip/README.md
        initial-utilities/wunzip/test-wunzip.sh
        initial-utilities/wzip/tests/1.binary
        initial-utilities/wzip/tests/1.desc
        initial-utilities/wzip/tests/1.err
        initial-utilities/wzip/tests/1.in
        initial-utilities/wzip/tests/1.out
        initial-utilities/wzip/tests/1.rc
        initial-utilities/wzip/tests/1.run
        initial-utilities/wzip/tests/2.binary
        initial-utilities/wzip/tests/2.desc
        initial-utilities/wzip/tests/2.err
        initial-utilities/wzip/tests/2.out
        initial-utilities/wzip/tests/2.rc
        initial-utilities/wzip/tests/2.run
        initial-utilities/wzip/tests/3.binary
        initial-utilities/wzip/tests/3.desc
        initial-utilities/wzip/tests/3.err
        initial-utilities/wzip/tests/3.out
        initial-utilities/wzip/tests/3.rc
        initial-utilities/wzip/tests/3.run
        initial-utilities/wzip/tests/4.binary
        initial-utilities/wzip/tests/4.desc
        initial-utilities/wzip/tests/4.err
        initial-utilities/wzip/tests/4.in
        initial-utilities/wzip/tests/4.out
        initial-utilities/wzip/tests/4.rc
        initial-utilities/wzip/tests/4.run
        initial-utilities/wzip/tests/5.binary
        initial-utilities/wzip/tests/5.desc
        initial-utilities/wzip/tests/5.err
        initial-utilities/wzip/tests/5.in
        initial-utilities/wzip/tests/5.out
        initial-utilities/wzip/tests/5.rc
        initial-utilities/wzip/tests/5.run
        initial-utilities/wzip/tests/6.binary
        initial-utilities/wzip/tests/6.desc
        initial-utilities/wzip/tests/6.err
        initial-utilities/wzip/tests/6.in
        initial-utilities/wzip/tests/6.out
        initial-utilities/wzip/tests/6.rc
        initial-utilities/wzip/tests/6.run
        initial-utilities/wzip/tests/filegen.py
        initial-utilities/wzip/README.md
        initial-utilities/wzip/test-wzip.sh
        initial-utilities/wzip/wzip.c
        initial-utilities/FUTURE.md
        initial-utilities/README.md
        initial-xv6/tests/1.desc
        initial-xv6/tests/1.err
        initial-xv6/tests/1.out
        initial-xv6/tests/1.rc
        initial-xv6/tests/1.run
        initial-xv6/tests/2.desc
        initial-xv6/tests/2.err
        initial-xv6/tests/2.out
        initial-xv6/tests/2.rc
        initial-xv6/tests/2.run
        initial-xv6/tests/pre
        initial-xv6/tests/test_1.c
        initial-xv6/tests/test_2.c
        initial-xv6/background.md
        initial-xv6/README.md
        initial-xv6/test-getreadcount.sh
        processes-shell/tests/p2a-test/test1
        processes-shell/tests/p2a-test/test2
        processes-shell/tests/p2a-test/test3
        processes-shell/tests/p2a-test/test4
        processes-shell/tests/1.desc
        processes-shell/tests/1.err
        processes-shell/tests/1.in
        processes-shell/tests/1.out
        processes-shell/tests/1.rc
        processes-shell/tests/1.run
        processes-shell/tests/10.desc
        processes-shell/tests/10.err
        processes-shell/tests/10.in
        processes-shell/tests/10.out
        processes-shell/tests/10.rc
        processes-shell/tests/10.run
        processes-shell/tests/11.desc
        processes-shell/tests/11.err
        processes-shell/tests/11.in
        processes-shell/tests/11.out
        processes-shell/tests/11.rc
        processes-shell/tests/11.run
        processes-shell/tests/12.desc
        processes-shell/tests/12.err
        processes-shell/tests/12.in
        processes-shell/tests/12.out
        processes-shell/tests/12.rc
        processes-shell/tests/12.run
        processes-shell/tests/13.desc
        processes-shell/tests/13.err
        processes-shell/tests/13.in
        processes-shell/tests/13.out
        processes-shell/tests/13.rc
        processes-shell/tests/13.run
        processes-shell/tests/14.desc
        processes-shell/tests/14.err
        processes-shell/tests/14.in
        processes-shell/tests/14.out
        processes-shell/tests/14.rc
        processes-shell/tests/14.run
        processes-shell/tests/15.desc
        processes-shell/tests/15.err
        processes-shell/tests/15.in
        processes-shell/tests/15.out
        processes-shell/tests/15.rc
        processes-shell/tests/15.run
        processes-shell/tests/16.desc
        processes-shell/tests/16.err
        processes-shell/tests/16.in
        processes-shell/tests/16.out
        processes-shell/tests/16.rc
        processes-shell/tests/16.run
        processes-shell/tests/17.desc
        processes-shell/tests/17.err
        processes-shell/tests/17.in
        processes-shell/tests/17.out
        processes-shell/tests/17.rc
        processes-shell/tests/17.run
        processes-shell/tests/18.desc
        processes-shell/tests/18.err
        processes-shell/tests/18.in
        processes-shell/tests/18.out
        processes-shell/tests/18.rc
        processes-shell/tests/18.run
        processes-shell/tests/19.desc
        processes-shell/tests/19.err
        processes-shell/tests/19.in
        processes-shell/tests/19.out
        processes-shell/tests/19.rc
        processes-shell/tests/19.run
        processes-shell/tests/2.desc
        processes-shell/tests/2.err
        processes-shell/tests/2.in
        processes-shell/tests/2.out
        processes-shell/tests/2.rc
        processes-shell/tests/2.run
        processes-shell/tests/20.desc
        processes-shell/tests/20.err
        processes-shell/tests/20.in
        processes-shell/tests/20.out
        processes-shell/tests/20.rc
        processes-shell/tests/20.run
        processes-shell/tests/21.desc
        processes-shell/tests/21.err
        processes-shell/tests/21.in
        processes-shell/tests/21.out
        processes-shell/tests/21.rc
        processes-shell/tests/21.run
        processes-shell/tests/22.desc
        processes-shell/tests/22.err
        processes-shell/tests/22.in
        processes-shell/tests/22.out
        processes-shell/tests/22.rc
        processes-shell/tests/22.run
        processes-shell/tests/3.desc
        processes-shell/tests/3.err
        processes-shell/tests/3.in
        processes-shell/tests/3.out
        processes-shell/tests/3.pre
        processes-shell/tests/3.rc
        processes-shell/tests/3.run
        processes-shell/tests/4.desc
        processes-shell/tests/4.err
        processes-shell/tests/4.in
        processes-shell/tests/4.out
        processes-shell/tests/4.rc
        processes-shell/tests/4.run
        processes-shell/tests/5.desc
        processes-shell/tests/5.err
        processes-shell/tests/5.in
        processes-shell/tests/5.out
        processes-shell/tests/5.rc
        processes-shell/tests/5.run
        processes-shell/tests/6.desc
        processes-shell/tests/6.err
        processes-shell/tests/6.in
        processes-shell/tests/6.out
        processes-shell/tests/6.rc
        processes-shell/tests/6.run
        processes-shell/tests/7.desc
        processes-shell/tests/7.err
        processes-shell/tests/7.in
        processes-shell/tests/7.out
        processes-shell/tests/7.rc
        processes-shell/tests/7.run
        processes-shell/tests/8.desc
        processes-shell/tests/8.err
        processes-shell/tests/8.in
        processes-shell/tests/8.out
        processes-shell/tests/8.rc
        processes-shell/tests/8.run
        processes-shell/tests/9.desc
        processes-shell/tests/9.err
        processes-shell/tests/9.in
        processes-shell/tests/9.out
        processes-shell/tests/9.rc
        processes-shell/tests/9.run
        processes-shell/tests/p1.sh
        processes-shell/tests/p2.sh
        processes-shell/tests/p3.sh
        processes-shell/tests/p4.sh
        processes-shell/tests/p5.sh
        processes-shell/README.md
        processes-shell/test-wish.sh
        scheduling-xv6-lottery/README.md
        tester/README.md
        tester/run-tests.sh
        tester/run-xv6-command.exp
        tester/xv6-edit-makefile.sh
        vm-xv6-intro/README.md
        INSTALL-xv6.md
        README.md)
